@@ -6,19 +6,24 @@ import com.example.pet.parent.request.Users.UserIdRequest;
 import com.example.pet.parent.request.Users.UserLoginRequest;
 import com.example.pet.parent.service.UsersService;
 import com.example.pet.parent.util.JwtTokenProvider;
+import com.fasterxml.jackson.annotation.JsonProperty;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.security.authentication.AuthenticationManager;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
 import org.springframework.security.core.Authentication;
+import org.springframework.security.core.AuthenticationException;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.web.bind.annotation.*;
 
-import java.util.List;
-import java.util.Map;
-import java.util.Optional;
+import java.util.*;
 
+/*
+    @RestController indicating that this class handles HTTP requests and
+    returns JSON or XML responses
+*/
 @RestController
 @RequestMapping("/user")
 public class UsersController {
@@ -69,25 +74,44 @@ public class UsersController {
             return ResponseEntity.badRequest().body("Email is already registered");
         user.setPassword(passwordEncoder.encode(user.getPassword()));
         Users newUser = usersService.createUser(user);
-        Authentication authentication = authenticationManager.authenticate(
-                new UsernamePasswordAuthenticationToken(user.getUsername(), user.getPassword()));
-        SecurityContextHolder.getContext().setAuthentication(authentication);
-        String token = jwtTokenProvider.generateToken(authentication);
-        return ResponseEntity.ok(Map.of("token", token, "user", newUser));
+        return ResponseEntity.ok(newUser);
     }
-
 
     @PostMapping("/login")
     public ResponseEntity<?> login (@RequestBody UserLoginRequest userLoginRequest) {
-        Authentication authentication = authenticationManager.authenticate(
-                new UsernamePasswordAuthenticationToken(userLoginRequest.getUsername(), userLoginRequest.getPassword()));
-        SecurityContextHolder.getContext().setAuthentication(authentication);
-        String token = jwtTokenProvider.generateToken(authentication);
-        Optional<Users> optionalUser = usersService.findByUsername(userLoginRequest.getUsername());
-        if (optionalUser.isPresent()) {
-            return ResponseEntity.ok(Map.of("token", token, "user", optionalUser.get()));
+        try {
+            /*
+                new UsernamePasswordAuthenticationToken creates an authentication token with the given username and password
+                 authenticationManager then authenticates the user based on the provided username and password
+             */
+            Authentication authentication = authenticationManager.authenticate(
+                    new UsernamePasswordAuthenticationToken(userLoginRequest.getUsername(), userLoginRequest.getPassword()));
+            SecurityContextHolder.getContext().setAuthentication(authentication);
+            String token = jwtTokenProvider.generateToken(authentication);
+            Optional<Users> optionalUser = usersService.findByUsername(userLoginRequest.getUsername());
+            return ResponseEntity.ok(new JWTToken(token));
+        } catch (AuthenticationException exception) {
+            return new ResponseEntity<>(Collections.singletonMap("Authentication Exception", exception.getLocalizedMessage()),
+                    HttpStatus.UNAUTHORIZED);
         }
-        else
-            return ResponseEntity.status(401).body("Invalid Credentials");
     }
+}
+
+class JWTToken {
+
+    private String idToken;
+
+    JWTToken (String idToken) {
+        this.idToken = idToken;
+    }
+
+    @JsonProperty("id_token")                   // shows that the key of JSON pair will be id_token
+    String getIdToken() {
+        return idToken;
+    }
+
+    void setIdToken(String idToken) {
+        this.idToken = idToken;
+    }
+
 }
